--- a/css/scss/common/_variable.scss
+++ b/css/scss/common/_variable.scss
@@ -5,5 +5,6 @@ $yellow-normal: #fff7e2;
 $yellow-gray: #f9f9f9;
 $gray-normal: #9d9d9d;
 $dark-gray: #545454;
+$dark-light: #434343;
 $gray-border: #bfbfbf;
 $gray-semi: #828282;
