Pay_online page done

--- a/css/scss/components/_unit-prices.scss
+++ b/css/scss/components/_unit-prices.scss
@@ -146,6 +146,10 @@ Unit Prices Page CSS Start
       .call-btn {
         a {
           @include btn(20px 60px, 20px, 190px, white, $gray-normal);
+          transition: all 0.3s ease-in;
+          &:hover {
+            background-color: $blue;
+          }
         }
       }
 
