--- a/css/scss/common/_variable.scss
+++ b/css/scss/common/_variable.scss
@@ -1,6 +1,6 @@
 $blue: #0601ff;
 $black: #0d0d0d;
-$yellow: #f8bd18;
+$yellow: #f3b300;
 $yellow-normal: #fff7e2;
 $yellow-gray: #f9f9f9;
 $gray-normal: #9d9d9d;
