--- a/css/scss/common/_common.scss
+++ b/css/scss/common/_common.scss
@@ -123,25 +123,25 @@ main {
 
 /** ============================ Responsive CSS Start ============================ **/
 
-//Medium Device CSS start
-@media (min-width: 0px) and (max-width: 992px) {
+//Large Device CSS start
+@media (min-width: 0px) and (max-width: 1200px) {
   h1 {
-    font-size: 64px;
-  }
-  h2 {
-    font-size: 80px;
-  }
-  h3 {
     font-size: 48px;
   }
-  h4 {
+  h2 {
+    font-size: 42px;
+  }
+  h3 {
     font-size: 36px;
   }
+  h4 {
+    font-size: 30px;
+  }
   h5 {
-    font-size: 32px;
+    font-size: 20px;
   }
   h6 {
-    font-size: 24px;
+    font-size: 18px;
   }
 
   p {
@@ -150,56 +150,127 @@ main {
 
   //Common Margin
   .common-margin {
-    margin-top: 20px;
+    margin-top: 15px;
   }
 
   /* Button CSS */
   .button {
-    @include btn(20px 60px, 16px, 150px, white, $blue);
-    text-transform: capitalize;
-    font-size: 20px;
-    font-weight: 700;
-    border: none;
-    border-radius: 5px;
-    outline: none;
-    text-align: center;
-    transition: all 0.3s;
-    cursor: pointer;
+    font-size: 18px;
     i {
-      margin-right: 15px;
-      font-size: 20px;
-      font-weight: 400;
-    }
-
-    &:hover {
-      background-color: $yellow;
-      color: $black;
-    }
-
-    &.secondary-button {
-      background-color: $yellow-gray;
-      &:hover {
-        background-color: $blue;
-      }
+      font-size: 18px;
     }
   }
+}
 
-  // Main section BG
-  main {
-    background-color: $yellow-gray;
+//Medium Device CSS start
+@media (min-width: 0px) and (max-width: 992px) {
+  h1 {
+    font-size: 42px;
+  }
+  h2 {
+    font-size: 36px;
+  }
+  h3 {
+    font-size: 30px;
+  }
+  h4 {
+    font-size: 26px;
+  }
+  h5 {
+    font-size: 20px;
+  }
+  h6 {
+    font-size: 18px;
+  }
+
+  p {
+    font-size: 16px;
+  }
+
+  //Common Margin
+  .common-margin {
+    margin-top: 15px;
+  }
+
+  /* Button CSS */
+  .button {
+    font-size: 18px;
+    i {
+      font-size: 18px;
+    }
+  }
+}
+
+//Small Device CSS start
+@media (min-width: 0px) and (max-width: 768px) {
+  h1 {
+    font-size: 32px;
+  }
+  h2 {
+    font-size: 32px;
+  }
+  h3 {
+    font-size: 32px;
+  }
+  h4 {
+    font-size: 36px;
+  }
+  h5 {
+    font-size: 22px;
+  }
+  h6 {
+    font-size: 24px;
+  }
+
+  p {
+    font-size: 16px;
+  }
+
+  /*Padding CSS*/
+  .first-padding {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+
+  //Common Margin
+  .common-margin {
+    margin-top: 15px;
+  }
+
+  /* Button CSS */
+  .button {
+    font-size: 16px;
+    font-weight: 400;
+    padding: 15px 30px;
+    i {
+      font-size: 16px;
+    }
+  }
+}
+
+//Small Device CSS start
+@media (min-width: 0px) and (max-width: 576px) {
+  p {
+    font-size: 14px;
+  }
+  h3 {
+    font-size: 20px;
+  }
+  /* Button CSS */
+  .button {
+    padding: 10px 30px;
+    font-size: 14px;
+    i {
+      font-size: 14px;
+    }
   }
 
   //Feature Heading
   .feature-head {
     p {
       &.feature-num {
-        font-size: 20px;
-        font-weight: 500;
-        color: $yellow;
+        font-size: 12px;
       }
-    }
-    h3 {
-      font-weight: 700;
     }
   }
 }
