--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @font-face {
   font-family: "icomoon";
-  src: url("../fonts/icomoon.eot?ymdvt8");
-  src: url("../fonts/icomoon.eot?ymdvt8#iefix") format("embedded-opentype"), url("../fonts/icomoon.woff2?ymdvt8") format("woff2"), url("../fonts/icomoon.ttf?ymdvt8") format("truetype"), url("../fonts/icomoon.woff?ymdvt8") format("woff"), url("../fonts/icomoon.svg?ymdvt8#icomoon") format("svg");
+  src: url("../fonts/icomoon.eot?3euu6r");
+  src: url("../fonts/icomoon.eot?3euu6r#iefix") format("embedded-opentype"), url("../fonts/icomoon.woff2?3euu6r") format("woff2"), url("../fonts/icomoon.ttf?3euu6r") format("truetype"), url("../fonts/icomoon.woff?3euu6r") format("woff"), url("../fonts/icomoon.svg?3euu6r#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block; }
@@ -19,23 +19,64 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; }
 
+.icon-unit-prices:before {
+  content: "\e918"; }
+
+.icon-location:before {
+  content: "\e91e"; }
+
 .icon-boxes:before {
   content: "\e910"; }
 
-.icon-fenced-gated:before {
+.icon-hours-24:before {
   content: "\e911"; }
+
+.icon-ground-floor:before {
+  content: "\e91b"; }
+
+.icon-dollies-handcarts:before {
+  content: "\e915"; }
+
+.icon-online-pay:before {
+  content: "\e917"; }
+
+.icon-one:before {
+  content: "\e900"; }
+
+.icon-hamburger .path1:before {
+  content: "\e913";
+  color: #bdbcff; }
+
+.icon-hamburger .path2:before {
+  content: "\e91a";
+  margin-left: -1em;
+  color: #5552ff; }
+
+.icon-hamburger .path3:before {
+  content: "\e921";
+  margin-left: -1em;
+  color: #bdbcff; }
+
+.icon-home:before {
+  content: "\e905"; }
+
+.icon-size-guide:before {
+  content: "\e919"; }
+
+.icon-info:before {
+  content: "\e91f"; }
+
+.icon-pay-card:before {
+  content: "\e920"; }
 
 .icon-security-camera:before {
   content: "\e912"; }
 
-.icon-ground-floor:before {
-  content: "\e913"; }
-
-.icon-hours-24:before {
+.icon-fenced-gated:before {
   content: "\e914"; }
 
-.icon-dollies:before {
-  content: "\e915"; }
+.icon-two:before {
+  content: "\e916"; }
 
 .icon-right-arrow:before {
   content: "\e90d"; }
@@ -49,20 +90,11 @@
 .icon-g:before {
   content: "\e903"; }
 
-.icon-two:before {
-  content: "\e900"; }
-
-.icon-one:before {
-  content: "\e901"; }
-
 .icon-fluent-arrow-right:before {
   content: "\e902"; }
 
 .icon-star:before {
   content: "\e904"; }
-
-.icon-online-pay:before {
-  content: "\e905"; }
 
 .icon-minus:before {
   content: "\e906"; }
@@ -171,7 +203,7 @@ ul {
     font-size: 20px;
     font-weight: 400; }
   .button:hover {
-    background-color: #f8bd18;
+    background-color: #f3b300;
     color: #0d0d0d; }
   .button.secondary-button {
     background-color: #f9f9f9; }
@@ -184,74 +216,125 @@ main {
 .feature-head p.feature-num {
   font-size: 20px;
   font-weight: 500;
-  color: #f8bd18; }
+  color: #f3b300; }
 .feature-head h3 {
   font-weight: 700; }
 
 /* === Common CSS start Here ===*/
 /** ============================ Responsive CSS Start ============================ **/
-@media (min-width: 0px) and (max-width: 992px) {
+@media (min-width: 0px) and (max-width: 1200px) {
   h1 {
-    font-size: 64px; }
-
-  h2 {
-    font-size: 80px; }
-
-  h3 {
     font-size: 48px; }
 
-  h4 {
+  h2 {
+    font-size: 42px; }
+
+  h3 {
     font-size: 36px; }
 
+  h4 {
+    font-size: 30px; }
+
   h5 {
-    font-size: 32px; }
+    font-size: 20px; }
 
   h6 {
-    font-size: 24px; }
+    font-size: 18px; }
 
   p {
     font-size: 18px; }
 
   .common-margin {
-    margin-top: 20px; }
+    margin-top: 15px; }
 
   /* Button CSS */
   .button {
-    padding: 20px 60px;
-    font-size: 16px;
-    min-width: 150px;
-    color: white;
-    background-color: #0601ff;
-    text-transform: capitalize;
-    font-size: 20px;
-    font-weight: 700;
-    border: none;
-    border-radius: 5px;
-    outline: none;
-    text-align: center;
-    transition: all 0.3s;
-    cursor: pointer; }
+    font-size: 18px; }
     .button i {
-      margin-right: 15px;
-      font-size: 20px;
-      font-weight: 400; }
-    .button:hover {
-      background-color: #f8bd18;
-      color: #0d0d0d; }
-    .button.secondary-button {
-      background-color: #f9f9f9; }
-      .button.secondary-button:hover {
-        background-color: #0601ff; }
+      font-size: 18px; } }
+@media (min-width: 0px) and (max-width: 992px) {
+  h1 {
+    font-size: 42px; }
 
-  main {
-    background-color: #f9f9f9; }
+  h2 {
+    font-size: 36px; }
+
+  h3 {
+    font-size: 30px; }
+
+  h4 {
+    font-size: 26px; }
+
+  h5 {
+    font-size: 20px; }
+
+  h6 {
+    font-size: 18px; }
+
+  p {
+    font-size: 16px; }
+
+  .common-margin {
+    margin-top: 15px; }
+
+  /* Button CSS */
+  .button {
+    font-size: 18px; }
+    .button i {
+      font-size: 18px; } }
+@media (min-width: 0px) and (max-width: 768px) {
+  h1 {
+    font-size: 32px; }
+
+  h2 {
+    font-size: 32px; }
+
+  h3 {
+    font-size: 32px; }
+
+  h4 {
+    font-size: 36px; }
+
+  h5 {
+    font-size: 22px; }
+
+  h6 {
+    font-size: 24px; }
+
+  p {
+    font-size: 16px; }
+
+  /*Padding CSS*/
+  .first-padding {
+    padding-top: 40px;
+    padding-bottom: 40px; }
+
+  .common-margin {
+    margin-top: 15px; }
+
+  /* Button CSS */
+  .button {
+    font-size: 16px;
+    font-weight: 400;
+    padding: 15px 30px; }
+    .button i {
+      font-size: 16px; } }
+@media (min-width: 0px) and (max-width: 576px) {
+  p {
+    font-size: 14px; }
+
+  h3 {
+    font-size: 20px; }
+
+  /* Button CSS */
+  .button {
+    padding: 10px 30px;
+    font-size: 14px; }
+    .button i {
+      font-size: 14px; }
 
   .feature-head p.feature-num {
-    font-size: 20px;
-    font-weight: 500;
-    color: #f8bd18; }
-  .feature-head h3 {
-    font-weight: 700; } }
+    font-size: 12px; } }
 /** ============================ Responsive CSS End ============================ **/
 header {
   padding: 15px 0px;
@@ -308,8 +391,9 @@ header {
   position: relative;
   padding: 60px 30px;
   border-radius: 12px;
-  color: #f8bd18 !important;
-  background-color: #fff7e2; }
+  color: #f3b300 !important;
+  background-color: #fff7e2;
+  transition: 0.2s; }
   .feature-section .single-feature:hover {
     background-color: #0601ff; }
     .feature-section .single-feature:hover .feature-content i {
@@ -331,7 +415,7 @@ header {
   .feature-section .single-feature .g-icon {
     position: absolute;
     bottom: 0;
-    right: -2px;
+    right: 0;
     z-index: 0; }
     .feature-section .single-feature .g-icon i {
       font-size: 180px;
@@ -341,6 +425,29 @@ header {
   margin-top: 80px; }
 
 /** == Feature Section CSS End == **/
+/** ============================ Responsive CSS Start ============================ **/
+@media (min-width: 0px) and (max-width: 992px) {
+  .feature-section .single-feature {
+    padding: 30px 15px; }
+    .feature-section .single-feature .feature-content h5 {
+      font-size: 24px; }
+    .feature-section .single-feature .g-icon i {
+      font-size: 100px; } }
+@media (min-width: 0px) and (max-width: 768px) {
+  .feature-section .single-feature {
+    padding: 30px 15px; }
+    .feature-section .single-feature .feature-content h5 {
+      font-size: 24px; }
+    .feature-section .single-feature .g-icon i {
+      font-size: 150px; } }
+@media (min-width: 0px) and (max-width: 576px) {
+  .feature-section .single-feature .feature-content h5 {
+    font-size: 20px; }
+  .feature-section .single-feature .feature-content i {
+    font-size: 48px; }
+  .feature-section .single-feature .g-icon i {
+    font-size: 130px; } }
+/** ============================ Responsive CSS Start ============================ **/
 .footer-section {
   background-color: #f4f3ff;
   padding: 64px 0; }
@@ -366,6 +473,36 @@ header {
       .footer-section .footer-menu ul li:last-child a {
         font-weight: 700; }
 
+@media (min-width: 0px) and (max-width: 1440px) {
+  .footer-section {
+    padding: 50px 0; }
+    .footer-section p {
+      font-size: 17px; }
+    .footer-section .footer-menu ul li {
+      margin: 0 10px; }
+      .footer-section .footer-menu ul li::after {
+        height: 100%;
+        right: -13px; }
+      .footer-section .footer-menu ul li a {
+        font-size: 14px; }
+      .footer-section .footer-menu ul li:last-child::after {
+        display: none; }
+      .footer-section .footer-menu ul li:last-child a {
+        font-weight: 700; } }
+@media (min-width: 0px) and (max-width: 1200px) {
+  .footer-section p {
+    font-size: 17px;
+    text-align: center; }
+  .footer-section .footer-menu {
+    margin-top: 20px;
+    text-align: center; } }
+@media (min-width: 0px) and (max-width: 992px) {
+  .footer-section p {
+    font-size: 16px; }
+  .footer-section .footer-menu {
+    margin-top: 10px; }
+    .footer-section .footer-menu ul li {
+      margin: 7px 10px; } }
 /** ========================= 
 Home Page CSS Start 
 ========================= **/
@@ -419,7 +556,7 @@ Home Page CSS Start
       .location-section .storage-unit .map-wrapper .one i.icon-one {
         font-size: 140px;
         font-weight: 400;
-        color: #f8bd18; }
+        color: #f3b300; }
     .location-section .storage-unit .map-wrapper .two {
       position: absolute;
       z-index: 0;
@@ -428,7 +565,7 @@ Home Page CSS Start
       .location-section .storage-unit .map-wrapper .two i.icon-two {
         font-size: 140px;
         font-weight: 400;
-        color: #f8bd18; }
+        color: #f3b300; }
     .location-section .storage-unit .map-wrapper .map-content {
       position: relative;
       z-index: 9;
@@ -442,6 +579,66 @@ Home Page CSS Start
 Home Page CSS End 
 ========================= **/
 /** ============================ Responsive CSS Start ============================ **/
+@media (min-width: 0px) and (max-width: 1200px) {
+  .location-section .storage-unit .map-wrapper .map-content {
+    padding: 50px 30px; } }
+@media (min-width: 0px) and (max-width: 992px) {
+  .banner-section .banner-container {
+    min-height: 500px; }
+    .banner-section .banner-container p {
+      font-size: 20px; }
+
+  .location-section .storage-unit .map-one-img {
+    margin-right: 0; }
+  .location-section .storage-unit .map-two-img {
+    margin-left: 0; }
+  .location-section .storage-unit .map-wrapper .one {
+    z-index: 10;
+    right: 20px; }
+    .location-section .storage-unit .map-wrapper .one i.icon-one {
+      font-size: 100px; }
+  .location-section .storage-unit .map-wrapper .two {
+    z-index: 10;
+    left: 20px;
+    top: -70px; }
+    .location-section .storage-unit .map-wrapper .two i.icon-two {
+      font-size: 100px; }
+  .location-section .storage-unit .map-content {
+    margin-top: -15px; }
+  .location-section .first-padding {
+    padding: 20px 0; } }
+@media (min-width: 0px) and (max-width: 768px) {
+  .banner-section .banner-container {
+    min-height: 350px; }
+    .banner-section .banner-container p {
+      margin-top: 5px;
+      font-size: 18px; }
+    .banner-section .banner-container .cta-btn {
+      margin-top: 30px; } }
+@media (min-width: 0px) and (max-width: 576px) {
+  .banner-section {
+    padding: 15px 10px; }
+    .banner-section .banner-container {
+      padding: 0 20px;
+      min-height: 350px; }
+      .banner-section .banner-container p {
+        font-size: 14px; }
+
+  .location-section .storage-unit .map-wrapper .one {
+    top: -40px; }
+    .location-section .storage-unit .map-wrapper .one i.icon-one {
+      font-size: 60px; }
+  .location-section .storage-unit .map-wrapper .two {
+    top: -40px;
+    right: 20px;
+    left: unset; }
+    .location-section .storage-unit .map-wrapper .two i.icon-two {
+      font-size: 60px; }
+  .location-section .storage-unit .map-wrapper .map-content {
+    padding: 30px 20px;
+    margin-top: -15px; }
+  .location-section .first-padding {
+    padding: 20px 0; } }
 /** ============================ Responsive CSS End ============================ **/
 /** ========================= 
 Unit Prices Page CSS Start 
@@ -470,7 +667,7 @@ Unit Prices Page CSS Start
     display: none; }
   .office-time-section .office-time i {
     font-size: 60px;
-    color: #f8bd18; }
+    color: #f3b300; }
   .office-time-section .office-time h6 {
     margin-bottom: 12px; }
   .office-time-section .office-time p {
@@ -487,7 +684,7 @@ Unit Prices Page CSS Start
 .unit-filter-section .search-box form {
   padding: 18px;
   display: flex;
-  border: 1px solid #f8bd18;
+  border: 1px solid #f3b300;
   border-radius: 8px; }
   .unit-filter-section .search-box form input {
     width: 100%; }
@@ -551,7 +748,7 @@ Unit Prices Page CSS Start
       background-color: #9d9d9d;
       transition: all 0.3s ease-in; }
       .unit-filter-section .category-details .single-unit .call-btn a:hover {
-        background-color: #f8bd18;
+        background-color: #f3b300;
         color: #0d0d0d; }
     .unit-filter-section .category-details .single-unit .common-pl {
       padding-left: 20px; }
@@ -621,13 +818,14 @@ Unit Prices Page CSS Start
           margin-top: -25px; }
           .checkout-cta-section .testimonial-modal .modal-dialog .modal-content .modal-body .rating p i {
             font-size: 24px;
-            color: #f8bd18; }
+            color: #f3b300; }
         .checkout-cta-section .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .input-field label {
           margin-top: 20px;
           font-weight: 600;
           color: #0d0d0d; }
         .checkout-cta-section .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .input-field input,
-        .checkout-cta-section .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .input-field select {
+        .checkout-cta-section .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .input-field select,
+        .checkout-cta-section .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .input-field textarea {
           margin-top: 10px;
           padding: 10px 20px;
           width: 100%;
@@ -638,6 +836,67 @@ Unit Prices Page CSS Start
           background-color: transparent;
           color: #828282;
           display: ""; }
+          .checkout-cta-section .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .input-field input option,
+          .checkout-cta-section .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .input-field select option,
+          .checkout-cta-section .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .input-field textarea option {
+            background-color: #0601ff;
+            padding: 20px 0;
+            color: white; }
+        .checkout-cta-section .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form body {
+          font-family: verdana; }
+        .checkout-cta-section .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .facility-option {
+          position: relative;
+          width: 100%;
+          margin: 0px auto; }
+          .checkout-cta-section .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .facility-option .arrow {
+            display: inline-block;
+            width: 10px;
+            height: 10px;
+            border-right: 2px solid #d9d9d9;
+            border-top: 2px solid #d9d9d9;
+            transform: rotate(135deg);
+            position: absolute;
+            top: 17px;
+            z-index: 0;
+            right: 20px;
+            transition: all 0.5s ease; }
+            .checkout-cta-section .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .facility-option .arrow.rotate {
+              position: absolute;
+              top: 20px;
+              transform: rotate(-45deg); }
+          .checkout-cta-section .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .facility-option .custom-dropdown-value {
+            width: 100%;
+            padding: 10px;
+            border: 1px solid #d9d9d9;
+            border-radius: 5px;
+            box-sizing: border-box;
+            cursor: pointer;
+            position: relative;
+            z-index: 1; }
+          .checkout-cta-section .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .facility-option .custom-dropdown {
+            position: absolute;
+            width: 100%;
+            background-color: white;
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+            border: 1px solid #d9d9d9;
+            border-radius: 5px;
+            opacity: 0;
+            visibility: hidden; }
+            .checkout-cta-section .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .facility-option .custom-dropdown li a {
+              display: block;
+              padding: 10px;
+              text-decoration: none;
+              font-size: 14px;
+              color: #444;
+              transition: all 0.5s ease; }
+              .checkout-cta-section .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .facility-option .custom-dropdown li a:hover {
+                background-color: #0601ff;
+                color: white; }
+            .checkout-cta-section .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .facility-option .custom-dropdown.open {
+              opacity: 1;
+              visibility: visible; }
         .checkout-cta-section .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .form-alert {
           margin: 30px 0; }
           .checkout-cta-section .testimonial-modal .modal-dialog .modal-content .modal-body .contact-form .form-alert p {
